# OpenSource-Scout

./: .env.example  .gitignore  README.md  pyproject.toml
apps/cli/: main.py
